k8s/argocd/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels: # istio.io/dataplane-mode: ambient
