k8s/argocd/argocd-deployment.yaml
# Use --insecure so Ingress can send traffic with HTTP
# --bashref /argocd is the subpath like https://IP/argocd
# env was added because of https://github.com/argoproj/argo-cd/issues/3572 error
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
        - args:
            - /usr/local/bin/argocd-server
            - --staticassets
            - /shared/app
            - --redis
            - argocd-redis:6379
            # - --insecure
          name: argocd-server
