k8s/argocd/argocd-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "argocd.bramble"
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "argocd.bramble"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-bramble-cert
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: Same
