k8s/argocd/argocd-httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-filter-redirect
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
      sectionName: http
  hostnames:
    - "argocd.bramble"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
      sectionName: https
  hostnames:
    - "argocd.bramble"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
