k8s/argocd/argocd-server-ingress.yaml
# Requires setting the argocd server to 'server.insecure: true'
# https://argo-cd.readthedocs.io/en/stable/operator-manual/server-commands/additional-configuration-method/
#
# TODO: Needed?  Can actually just patch the service to be a loadbalancer with hostname annotation
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.bramble`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.bramble`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
